--- a/linked_list/CMakeLists.txt
+++ b/linked_list/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required( VERSION 3.2)
+set(CMAKE_CXX_STANDARD 17)
 
-project(linked_list)
+project(containers)
 
-add_executable(linked_list linked_list.cpp)
+add_library(linkedlist INTERFACE)
+add_executable(containers main.cpp
+        linkedlist.h)
