--- a/linked_list/CMakeLists.txt
+++ b/linked_list/CMakeLists.txt
@@ -1,8 +1,17 @@
-cmake_minimum_required( VERSION 3.2)
+cmake_minimum_required( VERSION 3.5)
 set(CMAKE_CXX_STANDARD 17)
 
-project(containers)
+project(containers CXX)
 
-add_library(linkedlist INTERFACE)
-add_executable(containers main.cpp
-        linkedlist.h)
+
+add_library(linkedlist STATIC linkedlist.h)
+add_library(dynarray STATIC linkedlist.h)
+
+set_target_properties(linkedlist PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(dynarray PROPERTIES LINKER_LANGUAGE CXX)
+
+add_executable(containers main.cpp)
+
+target_link_libraries(containers PRIVATE linkedlist)
+target_link_libraries(containers PRIVATE dynarray)
+
